# exercises_summer_school_perception_day

./: .gitignore  README.md  download.sh
circle_detector/: package.xml
circle_detector/src/: laptop_camera_ros.py
publisher_listener/: package.xml
ros_tutorial/: README.md
ros_tutorial/docker/: Dockerfile  Dockerfile_no_gpu  docker-compose-dockerhub.yml  docker-compose.yml  docker-compose_no_gpu.yml  entrypoint.sh  requirements.txt
ros_tutorial/exercises/: README.md
ros_tutorial/exercises/2d_to_3d/: CMakeLists.txt  package.xml
ros_tutorial/exercises/2d_to_3d/launch/: start_2d_to_3d.launch  start_2d_to_3d_params.launch
ros_tutorial/exercises/2d_to_3d/params/: params_2d_to_3d.yaml  params_select_point.yaml
ros_tutorial/exercises/2d_to_3d/src/: camera_info.py  extract_3d_from_2d.py  select_point_2d.py  utils.py
ros_tutorial/exercises/circle_detector/: CMakeLists.txt  README.md
ros_tutorial/exercises/circle_detector/config/: circle_detector.json
ros_tutorial/exercises/circle_detector/launch/: circle_detector.launch  circle_detector_laptop_camera.launch
ros_tutorial/exercises/circle_detector/src/: circle_detector.py
ros_tutorial/exercises/publisher_listener/: CMakeLists.txt  README.md
ros_tutorial/exercises/publisher_listener/launch/: publisher_listener.launch
ros_tutorial/exercises/publisher_listener/src/: publisher_listener.py
