<package format="2">
  <name>circle_detector</name>
  <version>0.0.1</version>
  <description>Circle detector package</description>

  <maintainer email="andrea.berra@aerotrain.com">TODO</maintainer>

  <author>TODO</author>

  <license>ASL 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
