<package format="2">
  <name>publisher_listener</name>
  <version>0.0.1</version>
  <description>Publisher listener</description>

  <maintainer email="andrea.berra@aerotrain.com">TODO</maintainer>

  <author>TODO</author>

  <license>ASL 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>

</package>
